2005-07-21  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.in.in: Add src/elfcmp.

2005-05-07  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.in.in (XGETTEXT_OPTIONS): Define.

2005-02-05  Ulrich Drepper  <drepper@redhat.com>

	* POTFILES.in: Remove unnecessary entries.

2004-01-18  Ulrich Drepper  <drepper@redhat.com>

	* POTFILES.in: Add files from libdw, libebl, and libasm.

2003-08-11  Ulrich Drepper  <drepper@redhat.com>

	* Moved to CVS archive.